--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section data-index="0" class="about" id="about">
             <h2>ABOUT ME</h2>
             <div class="aboutpictext">
-                <img src="images/profile.jpg" alt="My Personal Headshot" style="width:30%;height:30%;">
+                <img src="./profile.jpg" alt="My Personal Headshot" style="width:30%;height:30%;">
                 <div class="abouttext">
                     <p>Hello! I'm a second-year Computer Science and Engineering student at UC Davis. My mission this year is to build projects that excite me and expand my interests, which currently include back-end development and geographic information systems. I'm currently working on building a Battleship experience in Javascript, based on a working C++ model I created last year. <a href="#contact">Let's connect!</a></p>
                     <p>Outside of school and work, you can find me reading tech blogs or watching YouTube tutorials to catch up on the latest coding trends in order to help me develop a growth mindset and become a more flexible developer. And when I'm not coding, you can find me painting my next "<a href="http://instagram.com/jorbeefa/">masterpiece</a>" or logging my latest read on <a href="https://www.goodreads.com/user/show/19528258-anika">Goodreads</a>.</p>
@@ -38,17 +38,17 @@
             <div class="card-container">
                 <div class="card">
                     <h3>Battleship</h3>
-                    <img class="myImg" src="images/battleship.png" alt="Battleship gameplay screenshot">
+                    <img class="myImg" src="./battleship.png" alt="Battleship gameplay screenshot">
                     <p>A multiplayer Battleship game written in C++ and run through the terminal. The game offers multiple AI/Human Player options and allows users to customize the dimensions of the playing board and ships (with error-checking).</p>
                 </div>
                 <div class="card">               
                     <h3>Davis Boba Map</h3>
-                    <img class="myImg" src="images/boba.png" alt="Boba Map Screenshot">
+                    <img class="myImg" src="./boba.png" alt="Boba Map Screenshot">
                     <p>An interactive map created with LeafletJS that displays every boba shop in Davis, CA. I wrote my own JSON file to add the locations of each boba shop, but I plan to write a script to automate this process in my future GIS projects.</p>
                 </div>
                 <div class="card">
                     <h3>Tic Tac Toe</h3>
-                    <img class="myImg" src="images/tictactoe.png" alt="Tic Tac Toe gameplay screenshot">
+                    <img class="myImg" src="./tictactoe.png" alt="Tic Tac Toe gameplay screenshot">
                     <p>A two-player Tic Tac Toe game written in C++ and run through the terminal. Similar to Battleship, the game allows users to set the board size and their own pieces, and it offers error-checking throughout gameplay.</p>
                 </div>
             </div>
