--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="aboutpictext">
                 <img src="images/profile.jpg" alt="My Personal Headshot" style="width:30%;height:30%;">
                 <div class="abouttext">
-                    <p>Hello! I'm a second-year Computer Science and Engineering student at UC Davis. My mission this year is to build projects that excite me and expand my interests, which currently include back-end development and geographic information systems. I'm currently working on building a Battleship experience in Javascript, based on a working C++ model I created last year. <a href="#contact">Let's connect!</a></p>
+                    <p>Hello! I'm a second-year Computer Science and Engineering student at UC Davis. My mission this year is to build projects that excite me and expand my interests, which currently include back-end development and geographic information systems. I'm currently working on making this website more responsive and building a Battleship experience in Javascript, based on a working C++ model I created last year. <a href="#contact">Let's connect!</a></p>
                     <p>Outside of school and work, you can find me reading tech blogs or watching YouTube tutorials to catch up on the latest coding trends in order to help me develop a growth mindset and become a more flexible developer. And when I'm not coding, you can find me painting my next "<a href="http://instagram.com/jorbeefa/">masterpiece</a>" or logging my latest read on <a href="https://www.goodreads.com/user/show/19528258-anika">Goodreads</a>.</p>
                 </div>
             </div>
