updated for random piano

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </section>
         <section data-index="1" class="projects" id="projects">
-            <h2>PROJECTS</h2>
+            <h2>FEATURED PROJECTS</h2>
             <div class="card-container">
                 <div class="card">
                     <h3>Battleship</h3>
@@ -47,11 +47,16 @@
                     <img class="myImg" src="images/boba.png" alt="Boba Map Screenshot">
                     <p>An interactive map created with LeafletJS that displays every boba shop in Davis, CA. I wrote my own JSON file to add the locations of each boba shop, but I plan to write a script to automate this process in my future GIS projects.</p>
                 </div>
-                <div class="card">
+                <div class = "card">
+                    <h3>Random Piano</h3>
+                    <img class="myImg" src="images/piano.png" alt="Random Piano Screenshot">
+                    <p>A web app created with Javascript that plays randomly-animated piano keys when users type on the keyboard. This is the first web app I've created that relies on Javascript for functionality. I learned how to manipulate the DOM and how to use functional programming to implement proper event handling. In the future, I would like to experiment with different text passages to allow the users to "type music." Play <a href="https://apatelcse.github.io/random-piano/index-START.html">here</a>!</p>
+                </div>
+<!--                 <div class="card">
                     <h3>Tic Tac Toe</h3>
                     <img class="myImg" src="images/tictactoe.png" alt="Tic Tac Toe gameplay screenshot">
                     <p>A two-player Tic Tac Toe game written in C++ and run through the terminal. Similar to Battleship, the game allows users to set the board size and their own pieces, and it offers error-checking throughout gameplay.</p>
-                </div>
+                </div> -->
             </div>
             <div id="myModal" class="modal">
                 <!-- The Close Button -->
