added spotify project

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                     <img class="myImg" src="images/battleship.png" alt="Battleship gameplay screenshot">
                     <p>A multiplayer Battleship game written in C++ and run through the terminal. The game offers multiple AI/Human Player options and allows users to customize the dimensions of the playing board and ships (with error-checking).</p>
                 </div>
+                <div class = "card">
+                    <h3>The Anthology of...</h3>
+                    <img class="myImg" src="images/spotify.png" alt="Spotify Playlist Screenshot">
+                    <p>A Python script that creates and fills Spotify playlists with a given artist's entire released works. I created this service as an extension of the "This is..." Spotify playlist that each artist receives. I'm currently working on optimizing the script for more popular artists and building a web application for the service to make it more user-friendly. Visit the Github page <a href="https://github.com/apatelCSE/spotify-python"></a>here!</a></p>
+                </div>
                 <div class="card">               
                     <h3>Davis Boba Map</h3>
                     <img class="myImg" src="images/boba.png" alt="Boba Map Screenshot">
