--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
                 <div class = "card">
                     <h3>The Anthology of...</h3>
                     <img class="myImg" src="images/spotify.png" alt="Spotify Playlist Screenshot">
-                    <p>A Python script that creates and fills Spotify playlists with a given artist's entire released works. I created this service as an extension of the "This is..." Spotify playlist that each artist receives. I'm currently working on optimizing the script for more popular artists and building a web application for the service to make it more user-friendly. Visit the Github page <a href="https://github.com/apatelCSE/spotify-python"></a>here!</a></p>
+                    <p>A Python script that creates and fills Spotify playlists with a given artist's entire released works. I created this service as an extension of the "This is..." Spotify playlist that each artist receives. I'm currently working on optimizing the script for more popular artists and building a web application for the service to make it more user-friendly. Visit the Github page <a href="https://github.com/apatelCSE/spotify-python">here!</a></p>
                 </div>
-                <!--<div class="card">               
-                    <h3>Davis Boba Map</h3>
-                    <img class="myImg" src="images/boba.png" alt="Boba Map Screenshot">
-                    <p>An interactive map created with LeafletJS that displays every boba shop in Davis, CA. I wrote my own JSON file to add the locations of each boba shop, but I plan to write a script to automate this process in my future GIS projects.</p>
-                </div> -->
                 <div class = "card">
                     <h3>Random Piano</h3>
                     <img class="myImg" src="images/piano.png" alt="Random Piano Screenshot">
                     <p>A web app created with Javascript that plays randomly-animated piano keys when users type on the keyboard. This is the first web app I've created that relies on Javascript for functionality. I learned how to manipulate the DOM and how to use functional programming to implement proper event handling. In the future, I would like to experiment with different text passages to allow the users to "type music." Play <a href="https://apatelcse.github.io/random-piano/index-START.html">here</a>!</p>
+                </div>
+                <div class="card">               
+                    <h3>Davis Boba Map</h3>
+                    <img class="myImg" src="images/boba.png" alt="Boba Map Screenshot">
+                    <p>An interactive map created with LeafletJS that displays every boba shop in Davis, CA. I wrote my own JSON file to add the locations of each boba shop, but I plan to write a script to automate this process in my future GIS projects.</p>
                 </div>
 <!--                 <div class="card">
                     <h3>Tic Tac Toe</h3>
