--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class = "card">
                     <h3>The Anthology of...</h3>
                     <img class="myImg" src="images/spotify.png" alt="Spotify Playlist Screenshot">
-                    <p>A Python script that creates and fills Spotify playlists with a given artist's entire released works. I created this service as an extension of the "This is..." Spotify playlist that each artist receives. I'm currently working on building a web application for the service using Django and React to make it more user-friendly. Visit the Github page <a href="https://github.com/apatelCSE/spotify-python">here!</a></p>
+                    <p>A Python script that creates and fills Spotify playlists with a given artist's entire released works. I created this service as an extension of the "This is..." Spotify playlist that each artist receives. I'm currently working on building a web application for the service (using Django and React) to make it more user-friendly. Visit the Github page <a href="https://github.com/apatelCSE/spotify-python">here!</a></p>
                 </div>
                 <div class = "card">
                     <h3>Random Piano</h3>
